[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "JWT_tapo44ek"  # Название вашей библиотеки
version = "1.0.0"
description = "A simple library for JWT management with FastAPI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyJWT>=2.6.0",
    "fastapi>=0.95.0"
]
authors = [
    {name = "Viktor Arsenev (GitHub tapo44ek)", email = "viktooooor2001@gmail.com"},
    {name = "Alexander Andreev (GitHub tzinchy)", email = "dreevxq@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
